<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:layout_centerHorizontal="true"
        android:text="@string/jacob_text"
        android:textSize="30sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/ic_profile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:text="@string/jacob_description_text"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="205dp"
        android:text="@string/user_follower_text"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="265dp"
        android:text="@string/created_workout_string"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="415dp"
        android:text="@string/recent_workout_string"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/user_profile_created_workout"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="305dp"
        android:background="@drawable/rectange_gray"
        android:text="@string/jacob_workout_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/user_profile_recent_workout"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="455dp"
        android:background="@drawable/rectange_gray"
        android:text="@string/peter_workout_text"
        android:textSize="18sp" />

    <Button
        android:id="@+id/user_profile_created_workout_view_more"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="365dp"
        android:text="@string/view_more_button_string" />

    <Button
        android:id="@+id/user_profile_recent_workout_view_more"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="515dp"
        android:text="@string/view_more_button_string" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/user_profile_add_workout"
        android:layout_width="100dp"
        android:layout_height="1000dp"
        android:layout_marginLeft="315dp"
        android:layout_marginTop="550dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="295dp"
        android:layout_marginTop="525dp"
        android:text="@string/create_workout_string"
        android:textSize="13sp" />

    <Button
        android:id="@+id/user_profile_logout"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="595dp"
        android:text="@string/logout_button_string" />


</RelativeLayout>