<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="105dp"
        android:text="@string/daniel_text"
        android:textSize="30sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/ic_profile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="155dp"
        android:text="@string/peter_description_text"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="205dp"
        android:text="@string/peter_follower_text"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="265dp"
        android:text="@string/created_workout_string"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="435dp"
        android:text="@string/recent_workout_string"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/daniels_profile_created_workout"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="305dp"
        android:background="@drawable/rectange_gray"
        android:text="@string/daniel_workout_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/daniels_profile_recent_workout"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="475dp"
        android:background="@drawable/rectange_gray"
        android:text="@string/peter_workout_text"
        android:textSize="18sp" />

    <Button
        android:id="@+id/daniels_profile_created_workout_view_more"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="385dp"
        android:text="@string/view_more_button_string" />

    <Button
        android:id="@+id/daniels_profile_recent_workout_view_more"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="535dp"
        android:text="@string/view_more_button_string" />

</RelativeLayout>