<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25sp"
        android:ems="10"
        android:hint="@string/input_user"
        android:inputType="textPersonName"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125sp"
        android:ems="10"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225sp"
        android:ems="10"
        android:textSize="25sp"
        android:hint="@string/input_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="275sp"
        android:layout_marginLeft="63dp"
        android:layout_marginRight="63dp"
        android:text="@string/password_hint" />

    <Button
        android:id="@+id/create_account_filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="375dp"
        android:text="@string/create_account" />

</RelativeLayout>