<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lgf"
        android:textSize="35sp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="75dp" />

    <TextView
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="25sp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="300dp"
        android:textColor="@android:color/holo_blue_light" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="375dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />

</RelativeLayout>