<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/email_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25sp"
        android:ems="10"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125sp"
        android:ems="10"
        android:textSize="25sp"
        android:hint="@string/input_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />

</RelativeLayout>